--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sneha Ramanathan | Portfolio</title>
+  <title>Akshata Chettiar | Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css">
 </head>
@@ -26,24 +26,20 @@
       <span class="skill">Python</span>
       <span class="skill">Django</span>
       <span class="skill">Flask</span>
-      <span class="skill">JavaScript</span>
       <span class="skill">HTML</span>
       <span class="skill">CSS</span>
       <span class="skill">SQL</span>
       <span class="skill">Pandas</span>
       <span class="skill">NumPy</span>
-      <span class="skill">Git</span>
       <!-- DUPLICATE -->
       <span class="skill">Python</span>
       <span class="skill">Django</span>
       <span class="skill">Flask</span>
-      <span class="skill">JavaScript</span>
       <span class="skill">HTML</span>
       <span class="skill">CSS</span>
       <span class="skill">SQL</span>
       <span class="skill">Pandas</span>
       <span class="skill">NumPy</span>
-      <span class="skill">Git</span>
     </div>
   </div>
 </section>
@@ -80,4 +76,5 @@
   <script src="script.js"></script>
   
 </body>
+
 </html>
